--- a/css/styles.css
+++ b/css/styles.css
@@ -51,7 +51,10 @@ h2 {
   font-size: 2.2rem;
 }
 
-
+iframe{
+  width: 90%;
+  padding-right: 5%;
+}
 img {
   padding: 0.3rem 0.8rem 0.5rem 0.8rem;
   margin: 0.6rem 0 0.2rem;
